samples/_failures_safe/1761796018_cd0095_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_56f8b633.c: In function ‘main’:
./samples/SAFE/__tmp_56f8b633.c:148:12: error: expected identifier or ‘(’ at end of input
  148 |     struct StateMachine
      |            ^~~~~~~~~~~~
./samples/SAFE/__tmp_56f8b633.c:148:12: error: expected declaration or statement at end of input
